fixed some commentaries

--- a/Store Item Demand Forecasting - Original Version.ipynb
+++ b/Store Item Demand Forecasting - Original Version.ipynb
@@ -2846,14 +2846,7 @@
     }
    ],
    "source": [
-    "sns.distplot(np.log1p(df5['sales']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TESTAR PERFORMANCE DO MODELO COM SALES NORMAL, E LOG DE SALES"
+    "sns.distplot(np.log1p(df5['sales']));"
    ]
   },
   {
@@ -2981,15 +2974,6 @@
    },
    "source": [
     "# 6.0 Feature Selection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "Na Verdade, não temos o que selecionar aqui, é uma Time Series, precisamos do que temos, não podemos dropar nada"
    ]
   },
   {
@@ -3419,11 +3403,10 @@
     "\n",
     "# prediction based on item\n",
     "aux2 = aux1[['item', 'sales']].groupby( 'item' ).mean().reset_index().rename( columns={'sales': 'predictions'} )\n",
-    "aux1 = pd.merge( aux1, aux2, how='left', on='item' )  # neste caso, qualquer \"how\" iria dar o mesmo resultado, pois todas as stores no aux2 vao estar na aux1 também, com valores\n",
+    "aux1 = pd.merge( aux1, aux2, how='left', on='item' ) \n",
     "yhat_baseline = aux1['predictions']\n",
     "\n",
     "# performance\n",
-    "#baseline_result = ml_error( 'Average Model', np.expm1( y_test ), np.expm1( yhat_baseline ) ) # exp pois as sales tinham sido transformados pra log\n",
     "baseline_result = ml_error( 'Average Model',  y_test ,  yhat_baseline )  # exp pois as sales tinham sido transformados pra log\n",
     "baseline_result"
    ]
@@ -3504,7 +3487,6 @@
     "yhat_baseline = aux1['predictions']\n",
     "\n",
     "# performance\n",
-    "#baseline_result = ml_error( 'Average Model', np.expm1( y_test ), np.expm1( yhat_baseline ) ) \n",
     "baseline_result = ml_error( 'Average Model',  y_test ,  yhat_baseline )  # exp pois as sales tinham sido transformados pra log\n",
     "baseline_result"
    ]
@@ -5319,7 +5301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cross Validation Time Series com Meigarom Code"
+    "### Cross Validation Time Series with Meigarom's Code"
    ]
   },
   {
@@ -5526,9 +5508,7 @@
     "#     cv=5\n",
     "#  )\n",
     "# bayes_search.fit(X_train, y_train)\n",
-    "# bayes_search.score(X_test, y_test)\n",
-    "\n",
-    "# tá dando erro, sabe-se lá pq: TypeError: object.__init__() takes exactly one argument (the instance to initialize)"
+    "# bayes_search.score(X_test, y_test)"
    ]
   },
   {
@@ -6023,7 +6003,7 @@
     }
    ],
    "source": [
-    "sns.barplot(x='store', y='MAPE', data=df92)"
+    "sns.barplot(x='store', y='MAPE', data=df92);"
    ]
   },
   {
@@ -6174,16 +6154,6 @@
     "# By default, the plot aggregates over multiple y values at each value of x and shows an estimate of the central tendency and a confidence interval for that estimate.\n",
     "sns.lineplot( x='date', y='sales', data=df9, label='SALES' );\n",
     "sns.lineplot( x='date', y='predictions', data=df9, label='PREDICTIONS' );"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "PORQUE TEM ESSAS QUEDAS NAS VENDAS?\n",
-    "E PORQUE AS VENDAS SÃO TÃO CÍCLICAS?\n",
-    "\n",
-    "VERIFICAR DEPOIS O GRÁFICO FEITO NO ROSSMANN"
    ]
   },
   {
