fixed some commentaries

--- a/Store Item Demand Forecasting - Original Version.ipynb
+++ b/Store Item Demand Forecasting - Original Version.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": "true"
+   },
    "source": [
     "# Store Item Demand Forecasting Challenge\n",
     "\n",
@@ -27,16 +29,13 @@
     "- Usar week of year\n",
     "- Usar mean of group, ex: data_df['itemweekday_mean'] = data_df.groupby(['weekday', 'item'])['sales'].transform('mean')\n",
     "data_df['storeweekday_mean'] = data_df.groupby(['weekday', 'store'])['sales'].transform('mean')\n",
-    "data_df['storeitemweekday_mean'] = data_df.groupby(['weekday', 'item', 'store'])['sales'].transform('mean')\n",
-    "\n",
-    "\n",
-    "\n",
-    "- Aprender Time Series, técnicas como ARIMA, pra utilizar de modo correto"
+    "data_df['storeitemweekday_mean'] = data_df.groupby(['weekday', 'item', 'store'])['sales'].transform('mean')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true
    },
    "source": [
@@ -46,6 +45,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true,
     "hidden": true
    },
@@ -126,6 +126,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "execution": {
      "iopub.execute_input": "2020-07-15T16:13:11.137015Z",
      "iopub.status.busy": "2020-07-15T16:13:11.135023Z",
@@ -369,6 +370,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "execution": {
      "iopub.execute_input": "2020-08-28T18:29:30.780538Z",
      "iopub.status.busy": "2020-08-28T18:29:30.779527Z",
@@ -438,6 +440,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
@@ -575,12 +578,13 @@
     "heading_collapsed": true
    },
    "source": [
-    "# 1.0 Descrição dos Dados"
+    "# 1.0 Data Description"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "execution": {
      "iopub.execute_input": "2020-08-28T18:48:22.817724Z",
      "iopub.status.busy": "2020-08-28T18:48:22.817724Z",
@@ -629,6 +633,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
@@ -697,6 +702,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
@@ -776,10 +782,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
-    "## 1.4 Estatísticas Descritivas"
+    "## 1.4 Descriptive Statistics"
    ]
   },
   {
@@ -1177,10 +1184,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true
    },
    "source": [
-    "# 3.0 Filtragem de Variáveis"
+    "# 3.0 Variables Filtering"
    ]
   },
   {
@@ -1413,17 +1421,18 @@
     "heading_collapsed": true
    },
    "source": [
-    "# 4.0 Análise Exploratória de Dados"
+    "# 4.0 Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## 4.1 Análise Univariada"
+    "## 4.1 Univariable Analysis"
    ]
   },
   {
@@ -1693,11 +1702,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## 4.2 Análise Bivariada"
+    "## 4.2 Bivariable Analysis"
    ]
   },
   {
@@ -2218,11 +2228,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## 4.3 Análise Multivariada"
+    "## 4.3 Multivariable Analysis"
    ]
   },
   {
@@ -2306,7 +2317,7 @@
     }
    },
    "source": [
-    "# 5.0 Preparação dos Dados"
+    "# 5.0 Data Preparation"
    ]
   },
   {
@@ -2410,7 +2421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Padronização"
+    "## 5.1 Standardization"
    ]
   },
   {
@@ -2662,7 +2673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.3 Transformação de Variáveis"
+    "## 5.3 Variable Transformation"
    ]
   },
   {
@@ -2804,7 +2815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3.2 Transformação da Variável Resposta"
+    "### 5.3.2 Response Variable Transformation"
    ]
   },
   {
@@ -2853,7 +2864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3.3 Transformação Cíclica"
+    "### 5.3.3 Nature Transformation"
    ]
   },
   {
@@ -5736,7 +5747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9.0 Tradução e Interpretação do Erro"
+    "# 9.0 Error Translation and Interpretation"
    ]
   },
   {
