--- a/Store Item Demand Forecasting - Quick Version.ipynb
+++ b/Store Item Demand Forecasting - Quick Version.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": "true"
+   },
    "source": [
     "# Store Item Demand Forecasting Challenge\n",
     "\n",
@@ -27,16 +29,13 @@
     "- Usar week of year\n",
     "- Usar mean of group, ex: data_df['itemweekday_mean'] = data_df.groupby(['weekday', 'item'])['sales'].transform('mean')\n",
     "data_df['storeweekday_mean'] = data_df.groupby(['weekday', 'store'])['sales'].transform('mean')\n",
-    "data_df['storeitemweekday_mean'] = data_df.groupby(['weekday', 'item', 'store'])['sales'].transform('mean')\n",
-    "\n",
-    "\n",
-    "\n",
-    "- Aprender Time Series, técnicas como ARIMA, pra utilizar de modo correto"
+    "data_df['storeitemweekday_mean'] = data_df.groupby(['weekday', 'item', 'store'])['sales'].transform('mean')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true
    },
    "source": [
@@ -46,6 +45,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true,
     "hidden": true
    },
@@ -126,6 +126,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "execution": {
      "iopub.execute_input": "2020-07-15T16:13:11.137015Z",
      "iopub.status.busy": "2020-07-15T16:13:11.135023Z",
@@ -369,6 +370,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "execution": {
      "iopub.execute_input": "2020-08-28T18:29:30.780538Z",
      "iopub.status.busy": "2020-08-28T18:29:30.779527Z",
@@ -438,6 +440,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
@@ -575,12 +578,13 @@
     "heading_collapsed": true
    },
    "source": [
-    "# 1.0 Descrição dos Dados"
+    "# 1.0 Data Description"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "execution": {
      "iopub.execute_input": "2020-08-28T18:48:22.817724Z",
      "iopub.status.busy": "2020-08-28T18:48:22.817724Z",
@@ -629,6 +633,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
@@ -697,6 +702,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
@@ -776,10 +782,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
-    "## 1.4 Estatísticas Descritivas"
+    "## 1.4 Descriptive Statistics"
    ]
   },
   {
@@ -1177,10 +1184,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true
    },
    "source": [
-    "# 3.0 Filtragem de Variáveis"
+    "# 3.0 Variables Filtering"
    ]
   },
   {
@@ -1389,17 +1397,18 @@
     "heading_collapsed": true
    },
    "source": [
-    "# 4.0 Análise Exploratória de Dados"
+    "# 4.0 Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## 4.1 Análise Univariada"
+    "## 4.1 Univariable Analysis"
    ]
   },
   {
@@ -1669,16 +1678,18 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## 4.2 Análise Bivariada"
+    "## 4.2 Bivariable Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": "true",
     "hidden": true
    },
    "source": [
@@ -2198,7 +2209,7 @@
     "hidden": true
    },
    "source": [
-    "## 4.3 Análise Multivariada"
+    "## 4.3 Multivariable Analysis"
    ]
   },
   {
@@ -2282,7 +2293,7 @@
     }
    },
    "source": [
-    "# 5.0 Preparação dos Dados"
+    "# 5.0 Data Preparation"
    ]
   },
   {
@@ -2386,7 +2397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Padronização"
+    "## 5.1 Standardization"
    ]
   },
   {
@@ -2467,7 +2478,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(df5['item'])"
+    "sns.boxplot(df5['item']);"
    ]
   },
   {
@@ -2509,7 +2520,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(df5['day'])"
+    "sns.boxplot(df5['day']);"
    ]
   },
   {
@@ -2551,7 +2562,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(df5['month'])"
+    "sns.boxplot(df5['month']);"
    ]
   },
   {
@@ -2593,7 +2604,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(df5['year'])"
+    "sns.boxplot(df5['year']);"
    ]
   },
   {
@@ -2638,7 +2649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.3 Transformação de Variáveis"
+    "## 5.3 Variable Transformation"
    ]
   },
   {
@@ -2780,7 +2791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3.2 Transformação da Variável Resposta"
+    "### 5.3.2 Response Variable Transformation"
    ]
   },
   {
@@ -2822,14 +2833,14 @@
     }
    ],
    "source": [
-    "sns.distplot(np.log1p(df5['sales']))"
+    "sns.distplot(np.log1p(df5['sales']));"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3.3 Transformação Cíclica"
+    "### 5.3.3 Nature Transformation"
    ]
   },
   {
@@ -4813,14 +4824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### APRENDER ARIMA PRA APLICAR NESTE E OUTROS CASOS DE TIME SERIES"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 9.0 Tradução e Interpretação do Erro"
+    "# 9.0 Error Translation and Interpretation"
    ]
   },
   {
@@ -5113,7 +5117,7 @@
     }
    ],
    "source": [
-    "sns.barplot(x='store', y='MAPE', data=df92)"
+    "sns.barplot(x='store', y='MAPE', data=df92);"
    ]
   },
   {
